--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,27 @@ task populateVersion {
 
 populateVersion.shouldRunAfter processResources
 war.dependsOn populateVersion
+
+task sorting << {
+
+    //unsorted array of versions
+    def unsortedArray = [
+        '1.1.3',
+        '1.1.0',
+        '1.10.2',
+        '1.9.1',
+        '1.1.8',
+        '1.1.15'
+    ]
+
+    // insert code here to sort array
+    def sortedArray = unsortedArray
+        .collect { ver -> ver.tokenize(".")*.toInteger() }
+        .sort { a,b -> a[0] != b[0] ? a[0] <=> b[0] : a[1] != b[1] ? a[1] <=> b[1] : a[2] <=> b[2] }
+        .collect { arr -> arr.join(".") }
+
+    println sortedArray // it should print to console correctly sorted array
+
+    // example of correct output [1.1.0, 1.1.3, 1.1.8, 1.1.15, 1.9.1, 1.10.2] }
+
+}
